...
                android:gravity="center_horizontal"
                android:text="@string/fact_length"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"/>

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacingMedium"
                app:bsb_bubble_color="@android:color/holo_red_light"
                app:bsb_bubble_text_color="@color/colorPrimaryDark"
                app:bsb_max="500"
...
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                tools:text="Fact Count Found"
                android:layout_marginBottom="@dimen/spacingMedium"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/row_fact" />
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
...
