...
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imViewShare"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@android:drawable/ic_menu_share"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/spacingMedium"
                android:layout_centerVertical="true"
...
